--- a/.github/workflows/cppcheck.yml
+++ b/.github/workflows/cppcheck.yml
@@ -1,31 +1,36 @@
-name: C/C++ Analysis and Tests
+name: C++ Build and Test with Memory Checking
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout repository with submodules
-      uses: actions/checkout@v3
-      with:
-        submodules: true  # Ensure submodules (e.g., googletest) are initialized
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-    - name: Install dependencies
+    - name: Set up GCC
+      run: sudo apt-get install g++ gcc
+
+    - name: Install Google Test
       run: |
-        sudo apt-get update
-        sudo apt-get install -y cppcheck build-essential
+        git clone https://github.com/google/googletest.git
+        cd googletest
+        mkdir build
+        cd build
+        cmake ..
+        make
+        sudo make install
 
-    - name: Run cppcheck
-      run: cppcheck --enable=all --inconclusive --std=c99 --suppress=missingIncludeSystem .
+    - name: Install Valgrind (for memory checking)
+      run: sudo apt-get install valgrind
 
-    - name: Build and run tests
-      run: |
-        make clean
-        make tests
-        ./tests/test_main  # Run the GoogleTest executable
+    - name: Build project
+      run: make
+
+    - name: Run tests with Valgrind
+      run: make valgrind
+
+    - name: Run tests with AddressSanitizer
+      run: make asan
