--- a/.github/workflows/cppcheck.yml
+++ b/.github/workflows/cppcheck.yml
@@ -1,36 +1,39 @@
-name: C++ Build and Test with Memory Checking
+name: CI Pipeline
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up GCC
-      run: sudo apt-get install g++ gcc
+    - name: Set up CMake
+      uses: actions/setup-cmake@v2
+      with:
+        cmake-version: '3.19.0'
 
-    - name: Install Valgrind
-      run: sudo apt-get install valgrind
-
-    - name: Install Google Test
+    - name: Install dependencies
       run: |
-        git clone https://github.com/google/googletest.git
-        cd googletest
+        sudo apt-get update
+        sudo apt-get install -y build-essential cmake libgtest-dev cppcheck
+
+    - name: Build and run tests
+      run: |
         mkdir build
         cd build
         cmake ..
         make
-        sudo make install
+        ctest --output-on-failure
 
-    - name: Build project
-      run: make
-
-    - name: Run tests with Valgrind
-      run: make valgrind
-
-    - name: Run tests with AddressSanitizer
-      run: make asan
+    - name: Run cppcheck
+      run: |
+        cppcheck --enable=all --inconclusive --std=c99 ../src/sensor_data.c
